 * Feature: Selection and transform action bar. Shows up when a selection or transform is active to give quick access to common operations, such as deselecting or applying the transform. Thanks CosmosX007 and Geese for suggesting.
 * Feature: Add buttons to the lock notice to unlock the canvas, reset the session when it's out of space or uncensor layers. Thanks Phoneme for suggesting.

2025-08-14 Version 2.3.0-beta.3
 * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
 * Feature: Pixel art input for pixel brushes, turns off all smoothing and makes the inputs apply immediately. Thanks Ben, dAVePAGE and Nilifin for reporting.
 * Fix: Remove alpha lock and erase toggle buttons when using the eraser tool.
 * Fix: Disable the "modern" WASAPI audio backend, because on some devices it causes crashes in the depths of Windows, makes drag and drop stop working or other strange effects. Thanks Ben, CrustStuff, dAVePAGE and Momo for reporting various different incarnations of this problem.

2025-08-08 Version 2.3.0-beta.2
 * Fix: Make start dialog not flicker briefly on some systems.
 * Removed Feature: Use the same logo for the application, too distracting evidently.
 * Fix: Make hosting session with a password work, it did not get picked up sometimes. Thanks Bluestrings for reporting.

2025-08-07 Version 2.3.0-beta.1
 * Removed Feature: Compatibility with the old 2.1 versions, which was originally released 6 years ago. 2.3 is compatible with 2.2 instead.
 * Feature: Add Edit > Lightness/Darkness to Alpha action. Thanks Ben for suggesting.
 * Feature: Allow switching annotation rendering between vector, smooth and pixel fonts. Thanks cvrsoiioo4 for suggesting.
 * Feature: "Clip to layer below" toggle on layers, for people used to that way of alpha preserving. Will be loaded from and saved to PSD files.